chore demo: add allow clear attribute documentation

--- a/modules/text-field/demo/text-field.html
+++ b/modules/text-field/demo/text-field.html
@@ -25,6 +25,12 @@
 
             <tbody>
                 <tr>
+                    <td>lx-allow-clear</td>
+                    <td><code>boolean</code></td>
+                    <td><code>false</code></td>
+                    <td>Add a button to clear the input model.</td>
+                </tr>
+                <tr>
                     <td>lx-error</td>
                     <td><code>boolean</code></td>
                     <td></td>
