--- a/modules/file-input/demo/file-input.html
+++ b/modules/file-input/demo/file-input.html
@@ -26,7 +26,7 @@
                     <td>The label of the input displayed as a placeholder.</td>
                 </tr>
                 <tr>
-                    <td>lx-change</td>
+                    <td>lx-callback</td>
                     <td><code>function</code></td>
                     <td></td>
                     <td>The function called once a file is selected with the file object as parameter.</td>
