chore demo: enhance documentation wording

--- a/modules/card/demo/card.html
+++ b/modules/card/demo/card.html
@@ -2,7 +2,7 @@
     <h1 class="main-section__title">Card</h1>
 
     <p class="main-section__intro">
-        LumX provides a card CSS component with various image positions.<br />CSS helpers are widely used to set different layouts.
+        A CSS card component with various image positions is available.<br />CSS helpers are widely used to set different layouts.
     </p>
 
     <lx-component lx-title="Card without image" lx-path="/includes/modules/card/includes/no-image.html"></lx-component>
