--- a/modules/checkbox/demo/checkbox.html
+++ b/modules/checkbox/demo/checkbox.html
@@ -2,12 +2,12 @@
     <h1 class="main-section__title">Checkbox</h1>
 
     <p class="main-section__intro">
-        <code>lx-checkbox</code> is a checkbox directive that will become a checkbox input element.
+        <code>lx-checkbox</code> is a directive that create an input checkbox element.
     </p>
 
     <lx-component lx-title="Basic usage" lx-path="/includes/modules/checkbox/includes/basic.html" lx-js-path="/js/checkbox/demo/demo-checkbox_controller.js">
-        You can specify the checkbox label as transcluded element.<br />
-        If you want to specify a helper message, you will need to transclude two directives.<br />
+        The checkbox label can be specified as transcluded element.<br />
+        To specify a helper message, two directives need to be transcluded.<br />
         <code>lx-checkbox-label</code> for the label and <code>lx-checkbox-help</code> for the helper message.
     </lx-component>
 
@@ -16,7 +16,7 @@
     </lx-component>
 
     <lx-component lx-title="Main colors" lx-path="/includes/modules/checkbox/includes/color.html" lx-js-path="/js/checkbox/demo/demo-checkbox_controller.js">
-        You can specify the checkbox color with main colors defined in <code>dist/scss/core/settings/defaults.scss</code>.
+        Main colors defined in <code>dist/scss/core/settings/defaults.scss</code> can be used to create colored checkboxes.
     </lx-component>
 
     <lx-component-attributes>
