--- a/modules/data-table/demo/data-table.html
+++ b/modules/data-table/demo/data-table.html
@@ -2,7 +2,7 @@
     <h1 class="main-section__title">Data table</h1>
 
     <p class="main-section__intro">
-        LumX provides a data table CSS component with various helpers for sorting options, selectable row, etc.
+        A CSS data table component with various helpers for sorting options, selectable row, etc. is available.
     </p>
 
     <lx-component lx-title="Basic usage" lx-path="/includes/modules/data-table/includes/basic.html"></lx-component>
