--- a/modules/date-picker/demo/date-picker.html
+++ b/modules/date-picker/demo/date-picker.html
@@ -2,7 +2,7 @@
     <h1 class="main-section__title">Date picker</h1>
 
     <p class="main-section__intro">
-        <code>lx-date-picker</code> is a directive that let user choose a date within a picker.
+        <code>lx-date-picker</code> is a directive that create a date picker. This date picker is managed by the <code>LxDatePickerService</code>.
     </p>
 
     <lx-component lx-title="Basic usage" lx-path="/includes/modules/date-picker/includes/basic.html" lx-js-path="/js/date-picker/demo/demo-date-picker_controller.js"></lx-component>
@@ -35,7 +35,7 @@
                     <td>lx-color</td>
                     <td><code>string</code></td>
                     <td><code>primary</code></td>
-                    <td>Define the button color. Options: colors defined in colors and sizes section in <code>dist/scss/core/settings/defaults.scss</code></td>
+                    <td>Define the date picker color. Options: colors defined in colors and sizes section in <code>dist/scss/core/settings/defaults.scss</code></td>
                 </tr>
                 <tr>
                     <td>lx-escape-close</td>
