--- a/modules/dialog/demo/dialog.html
+++ b/modules/dialog/demo/dialog.html
@@ -6,7 +6,8 @@
     </p>
 
     <lx-component lx-title="Basic usage" lx-path="/includes/modules/dialog/includes/basic.html" lx-js-path="/js/dialog/demo/demo-dialog_controller.js">
-        You need to transclude three directives : <code>lx-dialog-header</code>, <code>lx-dialog-content</code> and <code>lx-dialog-footer</code>.
+        Three directives need to be transcluded.<br />
+        <code>lx-dialog-header</code>, <code>lx-dialog-content</code> and <code>lx-dialog-footer</code>.
     </lx-component>
 
     <lx-component-attributes>
