--- a/modules/dropdown/demo/dropdown.html
+++ b/modules/dropdown/demo/dropdown.html
@@ -6,7 +6,8 @@
     </p>
 
     <lx-component lx-title="Basic usage" lx-path="/includes/modules/dropdown/includes/basic.html">
-        You need to transclude two directives : <code>lx-dropdown-toggle</code> that transclude the toggle button and <code>lx-dropdown-menu</code> that transclude the menu content.
+        Two directives need to be transcluded.<br />
+        <code>lx-dropdown-toggle</code> that transclude the toggle button and <code>lx-dropdown-menu</code> that transclude the menu content.
     </lx-component>
 
     <lx-component-attributes>
@@ -37,7 +38,7 @@
                     <td>lx-position</td>
                     <td><code>string</code></td>
                     <td><code>left</code></td>
-                    <td>Define the position of the dropdown menu. Options: <code>left</code>, <code>right</code></td>
+                    <td>Define the dropdown menu position. Options: <code>left</code>, <code>right</code></td>
                 </tr>
                 <tr>
                     <td>lx-width</td>
