--- a/modules/fab/demo/fab.html
+++ b/modules/fab/demo/fab.html
@@ -6,7 +6,7 @@
     </p>
 
     <lx-component lx-title="Basic usage" lx-path="/includes/modules/fab/includes/basic.html">
-        You need to transclude two directives : <code>lx-fab-trigger</code> that transclude the trigger button and <code>lx-fab-actions</code> that transclude the hidden buttons.
+        Two directives need to be transcluded: <code>lx-fab-trigger</code> that transclude the trigger button and <code>lx-fab-actions</code> that transclude the hidden buttons.
     </lx-component>
 
     <lx-component-attributes>
@@ -25,7 +25,7 @@
                     <td>lx-direction*</td>
                     <td><code>string</code></td>
                     <td></td>
-                    <td>Define the direction of action buttons. Options: <code>up</code>, <code>right</code>, <code>down</code>, <code>left</code></td>
+                    <td>Define the action buttons direction. Options: <code>up</code>, <code>right</code>, <code>down</code>, <code>left</code></td>
                 </tr>
             </tbody>
         </table>
