--- a/modules/file-input/demo/file-input.html
+++ b/modules/file-input/demo/file-input.html
@@ -2,7 +2,7 @@
     <h1 class="main-section__title">File input</h1>
 
     <p class="main-section__intro">
-        <code>lx-file-input</code>  is an input directive that will become an <code>input file</code> element.
+        <code>lx-file-input</code> is a directive that create an <code>input file</code> element.
     </p>
 
     <lx-component lx-title="Basic usage" lx-path="/includes/modules/file-input/includes/basic.html" lx-js-path="/js/file-input/demo/demo-file-input_controller.js"></lx-component>
@@ -23,7 +23,7 @@
                     <td>lx-label*</td>
                     <td><code>string</code></td>
                     <td></td>
-                    <td>The label of the input displayed as a placeholder.</td>
+                    <td>The input label displayed as a placeholder.</td>
                 </tr>
                 <tr>
                     <td>lx-callback</td>
