--- a/modules/list/demo/list.html
+++ b/modules/list/demo/list.html
@@ -2,7 +2,7 @@
     <h1 class="main-section__title">List</h1>
 
     <p class="main-section__intro">
-        LumX provides a list CSS component with various style helpers.
+        A CSS list component with various style helpers is available.
     </p>
 
     <lx-component lx-title="One line" lx-path="/includes/modules/list/includes/one-line.html"></lx-component>
