--- a/modules/notification/demo/notification.html
+++ b/modules/notification/demo/notification.html
@@ -2,15 +2,15 @@
     <h1 class="main-section__title">Notification</h1>
 
     <p class="main-section__intro">
-        Notification service is a service that displays simple notifications, alert boxes and confirm boxes.
+        <code>LxNotificationService</code> is a service that manage notifications, alert boxes and confirm boxes.
     </p>
 
     <lx-component lx-title="Basic usage" lx-path="/includes/modules/notification/includes/basic.html" lx-js-path="/js/notification/demo/demo-notification_controller.js">
-        The <code>notify</code> method have four parameters that allow user to prepend a colored icon and to handle sticky notifications.
+        The <code>notify</code> method have four parameters that allow user to prepend a colored icon and to handle with sticky notifications.
     </lx-component>
 
     <lx-component lx-title="Helpers" lx-path="/includes/modules/notification/includes/helper.html" lx-js-path="/js/notification/demo/demo-notification_controller.js">
-        Helper methods quickly create styled notification according to its state: <code>info</code>, <code>success</code>, <code>warning</code>, <code>error</code>.
+        Helper methods quickly create styled notification: <code>info</code>, <code>success</code>, <code>warning</code>, <code>error</code>.
     </lx-component>
 
     <lx-component lx-title="Alert box" lx-path="/includes/modules/notification/includes/alert.html" lx-js-path="/js/notification/demo/demo-notification_controller.js">
