--- a/modules/progress/demo/progress.html
+++ b/modules/progress/demo/progress.html
@@ -29,7 +29,7 @@
                     <td>lx-diameter</td>
                     <td><code>string</code></td>
                     <td><code>100</code></td>
-                    <td>The progress scale defined in percent value. Work only with the circular progress.</td>
+                    <td>The progress scale defined in percent value. Only available with the circular progress.</td>
                 </tr>
                 <tr>
                     <td>lx-type*</td>
