--- a/modules/select/demo/select.html
+++ b/modules/select/demo/select.html
@@ -2,7 +2,7 @@
     <h1 class="main-section__title">Select</h1>
 
     <p class="main-section__intro">
-        <code>lx-select</code> is a directive that create a selector that let user select on or multiple vlaues from various sources.
+        <code>lx-select</code> is a directive that create a selector that let user select one or multiple values from various sources.
     </p>
 
     <lx-component lx-title="Basic usage" lx-path="/includes/modules/select/includes/basic.html" lx-js-path="/js/select/demo/demo-select_controller.js"></lx-component>
@@ -73,7 +73,7 @@
                     <td>lx-label*</td>
                     <td><code>string</code></td>
                     <td></td>
-                    <td>The label of the input displayed as a placeholder.</td>
+                    <td>The input label displayed as a placeholder.</td>
                 </tr>
                 <tr>
                     <td>lx-loading</td>
