--- a/modules/switch/demo/switch.html
+++ b/modules/switch/demo/switch.html
@@ -2,12 +2,12 @@
     <h1 class="main-section__title">Switch</h1>
 
     <p class="main-section__intro">
-        <code>lx-switch</code> is a switch directive that will become a checkbox input element.
+        <code>lx-switch</code> is a directive that create an input checkbox element.
     </p>
 
     <lx-component lx-title="Basic usage" lx-path="/includes/modules/switch/includes/basic.html" lx-js-path="/js/switch/demo/demo-switch_controller.js">
-        You can specify the switch label as transcluded element.<br />
-        If you want to specify a helper message, you will need to transclude two directives.<br />
+        The switch label can be specified as transcluded element.<br />
+        To specify a helper message, two directives need to be transcluded.<br />
         <code>lx-switch-label</code> for the label and <code>lx-switch-help</code> for the helper message.
     </lx-component>
 
@@ -16,7 +16,7 @@
     </lx-component>
 
     <lx-component lx-title="Main colors" lx-path="/includes/modules/switch/includes/color.html" lx-js-path="/js/switch/demo/demo-switch_controller.js">
-        You can specify the switch color with main colors defined in <code>dist/scss/core/settings/defaults.scss</code>.
+        Main colors defined in <code>dist/scss/core/settings/defaults.scss</code> can be used to create colored switches.
     </lx-component>
 
     <lx-component-attributes>
