--- a/modules/tooltip/demo/tooltip.html
+++ b/modules/tooltip/demo/tooltip.html
@@ -2,7 +2,7 @@
     <h1 class="main-section__title">Tooltip</h1>
 
     <p class="main-section__intro">
-        <code>lx-tooltip</code> is a directive that create a tooltip on target element hover.
+        <code>lx-tooltip</code> is a directive that create a tooltip on a target element.
     </p>
 
     <lx-component lx-title="Basic usage" lx-path="/includes/modules/tooltip/includes/basic.html"></lx-component>
