--- a/modules/button/demo/button.html
+++ b/modules/button/demo/button.html
@@ -2,8 +2,8 @@
     <h1 class="main-section__title">Button</h1>
 
     <p class="main-section__intro">
-        <code>lx-button</code> is a button directive that will become a link element if you specify a <code>href</code> or <code>ng-href</code> attribute.<br />
-        Otherwise, it will become a <code>button</code> element.
+        <code>lx-button</code> is a directive that create a link element if you specify a <code>href</code> or <code>ng-href</code> attribute.<br />
+        Otherwise, it creates a <code>button</code> element.
     </p>
 
     <lx-component lx-title="Types" lx-path="/includes/modules/button/includes/type.html">
@@ -19,15 +19,13 @@
     </lx-component>
 
     <lx-component lx-title="Main colors" lx-path="/includes/modules/button/includes/color.html">
-        You can use color helpers to quickly create colored buttons.<br />
-        You can set button color with main colors defined in <code>dist/scss/core/settings/defaults.scss</code><br />
-        Text/Icon color and ripple colors will be automaticly set according to the color.
+        Main colors defined in <code>dist/scss/core/settings/defaults.scss</code> can be used to create colored buttons.<br />
+        Text / icon and ripple colors will be automaticly set according to the color.
     </lx-component>
 
     <lx-component lx-title="Custom colors" lx-path="/includes/modules/button/includes/custom-color.html">
-        Or you can create a fully customizable button with background and text color helpers.<br />
-        You need to use the css version of the button instead of the directive.<br />
-        Moreover, you should specfify the ripple color by using the ripple directive.
+        A fully customizable button can be created with a regular <code>button</code> element.<br />
+        Background and text color are applied with css helpers.
     </lx-component>
 
     <lx-component-attributes>
