--- a/modules/radio-button/demo/radio-button.html
+++ b/modules/radio-button/demo/radio-button.html
@@ -2,12 +2,12 @@
     <h1 class="main-section__title">Radio button</h1>
 
     <p class="main-section__intro">
-        <code>lx-radio-button</code> is a radio directive that will become a radio input element.
+        <code>lx-radio-button</code> is a directive that create an input radio element.
     </p>
 
     <lx-component lx-title="Basic usage" lx-path="/includes/modules/radio-button/includes/basic.html" lx-js-path="/js/radio-button/demo/demo-radio-button_controller.js">
-        You can specify the radio button label as transcluded element.<br />
-        If you want to specify a helper message, you will need to transclude two directives.<br />
+        The radio button label can be specified as transcluded element.<br />
+        To specify a helper message, two directives need to be transcluded.<br />
         <code>lx-radio-button-label</code> for the label and <code>lx-radio-button-help</code> for the helper message.
     </lx-component>
 
@@ -16,7 +16,7 @@
     </lx-component>
 
     <lx-component lx-title="Main colors" lx-path="/includes/modules/radio-button/includes/color.html" lx-js-path="/js/radio-button/demo/demo-radio-button_controller.js">
-        You can specify the radio button color with main colors defined in <code>dist/scss/core/settings/defaults.scss</code>
+        Main colors defined in <code>dist/scss/core/settings/defaults.scss</code> can be used to create colored radio buttons.
     </lx-component>
 
     <lx-component-attributes>
