--- a/modules/toolbar/demo/toolbar.html
+++ b/modules/toolbar/demo/toolbar.html
@@ -2,7 +2,7 @@
     <h1 class="main-section__title">Toolbar</h1>
 
     <p class="main-section__intro">
-        LumX provides a toolbar CSS component with three areas.
+        A CSS toolbar component with three areas is available.
     </p>
 
     <lx-component lx-title="Basic usage" lx-path="/includes/modules/toolbar/includes/basic.html"></lx-component>
