chore depth: add z-depth management

--- a/demo/index.html
+++ b/demo/index.html
@@ -143,6 +143,7 @@
     <script src="/js/tooltip/tooltip_directive.js"></script>
 
     <!-- Utils -->
+    <script src="/js/utils/depth_service.js"></script>
     <script src="/js/utils/event-scheduler_service.js"></script>
     <script src="/js/utils/transclude-replace_directive.js"></script>
     <script src="/js/utils/utils_service.js"></script>
