chore demo: add ng directive in documentation

--- a/modules/button/demo/button.html
+++ b/modules/button/demo/button.html
@@ -3,7 +3,7 @@
 
     <p class="main-section__intro">
         <code>lx-button</code> is a directive that create a link element if you specify a <code>href</code> or <code>ng-href</code> attribute.<br />
-        Otherwise, it creates a <code>button</code> element.
+        Otherwise, it creates a button element.
     </p>
 
     <lx-component lx-title="Types" lx-path="/includes/modules/button/includes/type.html">
@@ -57,6 +57,12 @@
                     <td><code>string</code></td>
                     <td><code>raised</code></td>
                     <td>Define the button type. Options: <code>raised</code>, <code>flat</code>, <code>fab</code>, <code>icon</code></td>
+                </tr>
+                <tr>
+                    <td>ng-*</td>
+                    <td></td>
+                    <td></td>
+                    <td>All angular directives are available as the directive generates a regular link or button element.</td>
                 </tr>
             </tbody>
         </table>
