--- a/modules/date-picker/demo/date-picker.html
+++ b/modules/date-picker/demo/date-picker.html
@@ -61,6 +61,12 @@
                     <td></td>
                     <td>Generate the calendar according to the given locale.</td>
                 </tr>
+                <tr>
+                    <td>ng-model*</td>
+                    <td><code>string</code></td>
+                    <td></td>
+                    <td>Assignable angular expression to data-bind to.</td>
+                </tr>
             </tbody>
         </table>
     </lx-component-attributes>
