--- a/modules/select/demo/select.html
+++ b/modules/select/demo/select.html
@@ -28,7 +28,7 @@
                     <td>Allow user to clear the select model.</td>
                 </tr>
                 <tr>
-                    <td>lx-choices</td>
+                    <td>lx-choices*</td>
                     <td><code>array</code></td>
                     <td></td>
                     <td>The list of choices available in the dropdown menu.</td>
@@ -104,6 +104,24 @@
                     <td><code>boolean</code></td>
                     <td></td>
                     <td>Set green valid style.</td>
+                </tr>
+                <tr>
+                    <td>ng-change</td>
+                    <td><code>string</code></td>
+                    <td></td>
+                    <td>Angular expression to be executed when input changes due to user interaction with the input element.</td>
+                </tr>
+                <tr>
+                    <td>ng-disabled</td>
+                    <td><code>expression</code></td>
+                    <td></td>
+                    <td>If the expression is truthy, then the disabled attribute will be set on the element.</td>
+                </tr>
+                <tr>
+                    <td>ng-model*</td>
+                    <td><code>string</code></td>
+                    <td></td>
+                    <td>Assignable angular expression to data-bind to.</td>
                 </tr>
             </tbody>
         </table>
