--- a/modules/switch/demo/switch.html
+++ b/modules/switch/demo/switch.html
@@ -37,6 +37,42 @@
                     <td><code>accent</code></td>
                     <td>Define the switch color. Options: colors defined in colors and sizes section in <code>dist/scss/core/settings/defaults.scss</code></td>
                 </tr>
+                <tr>
+                    <td>name</td>
+                    <td><code>string</code></td>
+                    <td></td>
+                    <td>Property name of the form under which the control is published.</td>
+                </tr>
+                <tr>
+                    <td>ng-change</td>
+                    <td><code>string</code></td>
+                    <td></td>
+                    <td>Angular expression to be executed when input changes due to user interaction with the input element.</td>
+                </tr>
+                <tr>
+                    <td>ng-disabled</td>
+                    <td><code>expression</code></td>
+                    <td></td>
+                    <td>If the expression is truthy, then the disabled attribute will be set on the element.</td>
+                </tr>
+                <tr>
+                    <td>ng-false-value</td>
+                    <td><code>expression</code></td>
+                    <td></td>
+                    <td>The value to which the expression should be set when not selected.</td>
+                </tr>
+                <tr>
+                    <td>ng-model*</td>
+                    <td><code>string</code></td>
+                    <td></td>
+                    <td>Assignable angular expression to data-bind to.</td>
+                </tr>
+                <tr>
+                    <td>ng-true-value</td>
+                    <td><code>expression</code></td>
+                    <td></td>
+                    <td>The value to which the expression should be set when selected.</td>
+                </tr>
             </tbody>
         </table>
     </lx-component-attributes>
